clusters/k4/kubernetes/apps/security/kanidm/instance/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kanidm-cluster
  annotations:
    gatus.home-operations.com/enabled: "true"
  labels:
    kanidm.kaniop.rs/cluster: kanidm-cluster
spec:
  hostnames:
    - idm.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - kind: Service
          name: kanidm-cluster
          port: 8443
      matches:
        - path:
            type: PathPrefix
            value: /
      sessionPersistence:
        sessionName: kanidm-session
        type: Cookie
        cookieConfig:
          lifetimeType: Session
